TPNOS-487 added resource and data source for DCNM policy module

--- a/website/dcnm.erb
+++ b/website/dcnm.erb
@@ -24,6 +24,9 @@
                     <li<%= sidebar_current("docs-dcnm-data-source-network") %>>
                         <a href="/docs/providers/dcnm/d/network.html">dcnm_network</a>
                     </li>
+                    <li<%= sidebar_current("docs-dcnm-data-source-policy") %>>
+                        <a href="/docs/providers/dcnm/d/policy.html">dcnm_policy</a>
+                    </li>
                     <li<%= sidebar_current("docs-dcnm-data-source-vrf") %>>
                         <a href="/docs/providers/dcnm/d/vrf.html">dcnm_vrf</a>
                     </li>
@@ -40,6 +43,9 @@
                     </li>
                     <li<%= sidebar_current("docs-dcnm-resource-network") %>>
                         <a href="/docs/providers/dcnm/r/network.html">dcnm_network</a>
+                    </li>
+                    <li<%= sidebar_current("docs-dcnm-resource-policy") %>>
+                        <a href="/docs/providers/dcnm/r/policy.html">dcnm_policy</a>
                     </li>
                     <li<%= sidebar_current("docs-dcnm-resource-rest") %>>
                         <a href="/docs/providers/dcnm/r/rest.html">dcnm_rest</a>
