added service node

--- a/website/dcnm.erb
+++ b/website/dcnm.erb
@@ -27,6 +27,9 @@
                     <li<%= sidebar_current("docs-dcnm-data-source-policy") %>>
                         <a href="/docs/providers/dcnm/d/policy.html">dcnm_policy</a>
                     </li>
+                    <li<%= sidebar_current("docs-dcnm-data-source-service_node") %>>
+                        <a href="/docs/providers/dcnm/d/service_node.html">dcnm_service_node</a>
+                    </li>
                     <li<%= sidebar_current("docs-dcnm-data-source-vrf") %>>
                         <a href="/docs/providers/dcnm/d/vrf.html">dcnm_vrf</a>
                     </li>
@@ -49,6 +52,9 @@
                     </li>
                     <li<%= sidebar_current("docs-dcnm-resource-rest") %>>
                         <a href="/docs/providers/dcnm/r/rest.html">dcnm_rest</a>
+                    </li>
+                    <li<%= sidebar_current("docs-dcnm-resource-service_node") %>>
+                        <a href="/docs/providers/dcnm/r/service_node.html">dcnm_service_node</a>
                     </li>
                     <li<%= sidebar_current("docs-dcnm-resource-vrf") %>>
                         <a href="/docs/providers/dcnm/r/vrf.html">dcnm_vrf</a>
