--- a/website/dcnm.erb
+++ b/website/dcnm.erb
@@ -30,6 +30,9 @@
                     <li<%= sidebar_current("docs-dcnm-data-source-service_node") %>>
                         <a href="/docs/providers/dcnm/d/service_node.html">dcnm_service_node</a>
                     </li>
+                    <li<%= sidebar_current("docs-dcnm-data-source-route_peering") %>>
+                        <a href="/docs/providers/dcnm/d/route_peering.html">dcnm_route_peering</a>
+                    </li>
                     <li<%= sidebar_current("docs-dcnm-data-source-vrf") %>>
                         <a href="/docs/providers/dcnm/d/vrf.html">dcnm_vrf</a>
                     </li>
@@ -55,6 +58,9 @@
                     </li>
                     <li<%= sidebar_current("docs-dcnm-resource-service_node") %>>
                         <a href="/docs/providers/dcnm/r/service_node.html">dcnm_service_node</a>
+                    </li>
+                    <li<%= sidebar_current("docs-dcnm-resource-route_peering") %>>
+                        <a href="/docs/providers/dcnm/r/route_peering.html">dcnm_route_peering</a>
                     </li>
                     <li<%= sidebar_current("docs-dcnm-resource-vrf") %>>
                         <a href="/docs/providers/dcnm/r/vrf.html">dcnm_vrf</a>
