added route_map_action in service_policy data-source

--- a/website/dcnm.erb
+++ b/website/dcnm.erb
@@ -30,6 +30,9 @@
                     <li<%= sidebar_current("docs-dcnm-data-source-service_node") %>>
                         <a href="/docs/providers/dcnm/d/service_node.html">dcnm_service_node</a>
                     </li>
+                    <li<%= sidebar_current("docs-dcnm-data-source-service_policy") %>>
+                    <a href="/docs/providers/dcnm/d/service_policy.html">dcnm_service_policy</a>
+                    </li>
                     <li<%= sidebar_current("docs-dcnm-data-source-template") %>>
                         <a href="/docs/providers/dcnm/d/template.html">dcnm_template</a>
                     </li>
@@ -62,8 +65,8 @@
                     <li<%= sidebar_current("docs-dcnm-resource-service_node") %>>
                         <a href="/docs/providers/dcnm/r/service_node.html">dcnm_service_node</a>
                     </li>
-                    <li<%= sidebar_current("docs-dcnm-resource-service_node") %>>
-                        <a href="/docs/providers/dcnm/r/service_node.html">dcnm_template</a>
+                    <li<%= sidebar_current("docs-dcnm-resource-service_policy") %>>
+                        <a href="/docs/providers/dcnm/r/service_policy.html">dcnm_service_policy</a>
                     </li>
                     <li<%= sidebar_current("docs-dcnm-resource-template") %>>
                         <a href="/docs/providers/dcnm/r/template.html">dcnm_route_peering</a>
